--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,9 +1,9 @@
 .footer-bs {
-  background-color: #3c3d41;
+  background-color: #364F6B;
   padding: 30px 45px;
-color: rgba(255,255,255,1.00);
-
-border-top-left-radius: 0px;
+  color: rgba(255,255,255,1.00);
+  margin-top: 20px;
+  border-top-left-radius: 0px;
 }
 .footer-bs .footer-brand, .footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { padding:10px 25px; }
 .footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { border-color: transparent; }
@@ -11,9 +11,9 @@ border-top-left-radius: 0px;
 .footer-bs .footer-brand p { font-size:12px; color:rgba(255,255,255,0.70); }
 
 .footer-bs .footer-nav ul.pages { list-style:none; padding:0px; }
-.footer-bs .footer-nav ul.pages li { padding:5px 0px;}
-.footer-bs .footer-nav ul.pages a { color:rgba(255,255,255,1.00); font-weight:bold; text-transform:uppercase; }
-.footer-bs .footer-nav ul.pages a:hover { color:rgba(255,255,255,0.80); text-decoration:none; }
+.footer-bs .footer-nav ul.pages li { padding:5px 0px; }
+.footer-bs .footer-nav ul.pages a { color:rgba(255,255,255,1.00); font-weight:bold; text-decoration: none }
+.footer-bs .footer-nav ul.pages a:hover { color:rgba(255,255,255,0.80); }
 .footer-bs .footer-nav h4 {
 font-size: 11px;
 text-transform: uppercase;
@@ -23,8 +23,8 @@ margin-bottom:10px;
 
 .footer-bs .footer-nav ul.list { list-style:none; padding:0px; }
 .footer-bs .footer-nav ul.list li { padding:5px 0px;}
-.footer-bs .footer-nav ul.list a { color:rgba(255,255,255,0.80); }
-.footer-bs .footer-nav ul.list a:hover { color:rgba(255,255,255,0.60); text-decoration:none; }
+.footer-bs .footer-nav ul.list a { color:rgba(255,255,255,0.80); text-decoration:none;}
+.footer-bs .footer-nav ul.list a:hover { color:rgba(255,255,255,0.60); }
 
 .footer-bs .footer-social ul { list-style:none; padding:0px; }
 .footer-bs .footer-social h4 {
@@ -33,8 +33,8 @@ text-transform: uppercase;
 letter-spacing: 3px;
 }
 .footer-bs .footer-social li { padding:5px 4px;}
-.footer-bs .footer-social a { color:rgba(255,255,255,1.00);}
-.footer-bs .footer-social a:hover { color:rgba(255,255,255,0.80); text-decoration:none; }
+.footer-bs .footer-social a { color:rgba(255,255,255,1.00); text-decoration:none; font-weight:bold;}
+.footer-bs .footer-social a:hover { color:rgba(255,255,255,0.80); }
 
 .footer-bs .footer-ns h4 {
 font-size: 11px;
