--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -13,7 +13,7 @@
 .footer-bs .footer-nav ul.pages { list-style:none; padding:0px; }
 .footer-bs .footer-nav ul.pages li { padding:5px 0px; }
 .footer-bs .footer-nav ul.pages a { color:rgba(255,255,255,1.00); font-weight:bold; text-decoration: none }
-.footer-bs .footer-nav ul.pages a:hover { color:rgba(255,255,255,0.80); }
+.footer-bs .footer-nav ul.pages a:hover { color: #3FC1C9; }
 .footer-bs .footer-nav h4 {
 font-size: 11px;
 text-transform: uppercase;
@@ -24,7 +24,7 @@ margin-bottom:10px;
 .footer-bs .footer-nav ul.list { list-style:none; padding:0px; }
 .footer-bs .footer-nav ul.list li { padding:5px 0px;}
 .footer-bs .footer-nav ul.list a { color:rgba(255,255,255,0.80); text-decoration:none;}
-.footer-bs .footer-nav ul.list a:hover { color:rgba(255,255,255,0.60); }
+.footer-bs .footer-nav ul.list a:hover { color:#3FC1C9 }
 
 .footer-bs .footer-social ul { list-style:none; padding:0px; }
 .footer-bs .footer-social h4 {
@@ -34,7 +34,7 @@ letter-spacing: 3px;
 }
 .footer-bs .footer-social li { padding:5px 4px;}
 .footer-bs .footer-social a { color:rgba(255,255,255,1.00); text-decoration:none; font-weight:bold;}
-.footer-bs .footer-social a:hover { color:rgba(255,255,255,0.80); }
+.footer-bs .footer-social a:hover { color:#3FC1C9 }
 
 .footer-bs .footer-ns h4 {
 font-size: 11px;
